parse-display-tests/tests/compile_fail/display/invalid_format_spec.stderr
error: unknown format trait `y`
 --> tests/compile_fail/display/invalid_format_spec.rs:3:11
  |
3 | #[display("{0:y}")]
  |           ^^^^^^^
